[project]
name = "demonalone-minipaint-comfyui"
description = "Lightweight local miniPaint editor integration for ComfyUI."
version = "1.0.2"
license = {file = "LICENSE"} 
# classifiers = [
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
# ]


[project.urls]
Repository = "https://github.com/DemonAlone/DemonAlone-miniPaint-ComfyUI"
#  Used by Comfy Registry https://registry.comfy.org
"Bug Tracker" = "https://github.com/DemonAlone/DemonAlone-miniPaint-ComfyUI/issues"

[tool.comfy]
PublisherId = "demonalone"
DisplayName = "DemonAlone-miniPaint-ComfyUI"
Icon = ""
includes = [] 
